--- a/solution.ipynb
+++ b/solution.ipynb
@@ -225,11 +225,20 @@
     "id": "2158ff2629daf2bb"
    },
    "source": [
-    "# Your implementations\n",
-    "You may add new cells, write helper functions or test code as you see fit.\n",
-    "Please use the cell below and include a description of your implementation.\n",
-    "Explain code design consideration, algorithmic choices and any other details you think is relevant to understanding your implementation.\n",
-    "Failing to explain your code will lead to point deductions."
+    "# Implementation\n",
+    "\n",
+    "Our implementation of **t-SNE** follows the core algorithmic steps described in the theory section, emphasizing correctness, clarity, and modular design.  \n",
+    "Each component is implemented separately:  \n",
+    "- `_pairwise_distances` computes squared Euclidean distances.  \n",
+    "- `_binary_search_sigma` finds the Gaussian width that matches the target perplexity via binary search.  \n",
+    "- `_compute_P` constructs the symmetric high-dimensional similarity matrix.  \n",
+    "- `_compute_Q` computes low-dimensional similarities using a Student-t distribution.  \n",
+    "- `_gradient` calculates the KL divergence gradient for optimization.  \n",
+    "\n",
+    "The main `fit_transform` method performs momentum-based gradient descent with **early exaggeration** (×4 for the first 100 iterations) to improve cluster separation and convergence stability.  \n",
+    "We include gradient clipping to prevent divergence and adaptively reduce the learning rate if the KL divergence spikes. The implementation enforces numerical stability (e.g., small epsilons, normalization) and deterministic initialization through a fixed random seed.  \n",
+    "\n",
+    "We **do not apply PCA inside the implementation**, leaving it to the user (as shown in the *Load Data* section) to decide whether to perform dimensionality reduction for performance optimization."
    ]
   },
   {
@@ -554,7 +563,7 @@
    "id": "ca742614",
    "metadata": {},
    "source": [
-    "# Unit Testing"
+    "## Unit Testing"
    ]
   },
   {
