--- a/solution.ipynb
+++ b/solution.ipynb
@@ -245,20 +245,37 @@
     "id": "afe206c9-d1f4-440b-aca0-c807cdd79451"
    },
    "source": [
-    "Our implementation of **t-SNE** follows the core algorithmic steps described in the theory section, emphasizing correctness, clarity, and modular design.  \n",
-    "Each component is implemented separately:  \n",
-    "- `_pairwise_distances` computes squared Euclidean distances using vectorized operations.  \n",
-    "- `_binary_search_sigma` finds the Gaussian width that matches the target perplexity via binary search.  \n",
-    "- `_compute_P` constructs the symmetric high-dimensional similarity matrix.  \n",
-    "- `_compute_Q` computes low-dimensional similarities using a Student-t distribution.  \n",
-    "- `_gradient` calculates the KL divergence gradient using **fully vectorized matrix operations** for optimal performance (no loops).  \n",
+    "#### Implementation Overview\n",
+    "\n",
+    "Our implementation of **t-SNE** follows the core algorithmic steps described in the theory section, emphasizing correctness, clarity, and modular design.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Component Architecture\n",
+    "\n",
+    "Each component is implemented separately:\n",
+    "\n",
+    "1. **`_pairwise_distances`:** Computes squared Euclidean distances using vectorized operations.\n",
+    "2. **`_binary_search_sigma`:** Finds the Gaussian width that matches the target perplexity via binary search.\n",
+    "3. **`_compute_P`:** Constructs the symmetric high-dimensional similarity matrix.\n",
+    "4. **`_compute_Q`:** Computes low-dimensional similarities using a Student-t distribution.\n",
+    "5. **`_gradient`:** Calculates the KL divergence gradient using **fully vectorized matrix operations** for optimal performance (no loops).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Optimization Strategy\n",
     "\n",
     "The main `fit_transform` method performs momentum-based gradient descent with **early exaggeration** (×4 for the first 100 iterations) to improve cluster separation and convergence stability.  \n",
-    "We include gradient clipping to prevent divergence and adaptively reduce the learning rate if the KL divergence spikes. The implementation enforces numerical stability (e.g., small epsilons, normalization) and deterministic initialization through a fixed random seed.  \n",
+    "We include gradient clipping to prevent divergence and adaptively reduce the learning rate if the KL divergence spikes. The implementation enforces numerical stability (e.g., small epsilons, normalization) and deterministic initialization through a fixed random seed.\n",
     "\n",
     "**Performance optimizations:**\n",
-    "- All distance and gradient computations are **fully vectorized** using NumPy matrix operations, avoiding Python loops for maximum efficiency.\n",
-    "- The gradient computation uses efficient matrix multiplication: `dY = sum_PQ_num * Y - PQ_num @ Y`, eliminating the need for explicit loops over data points.\n",
+    "\n",
+    "1. All distance and gradient computations are **fully vectorized** using NumPy matrix operations, avoiding Python loops for maximum efficiency.\n",
+    "2. The gradient computation uses efficient matrix multiplication: `dY = sum_PQ_num * Y - PQ_num @ Y`, eliminating the need for explicit loops over data points.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Design Decisions\n",
     "\n",
     "We **do not apply PCA inside the implementation**, leaving it to the user (as shown in the *Load Data* section) to decide whether to perform dimensionality reduction for performance optimization."
    ]
@@ -1053,34 +1070,43 @@
     "id": "74c4083f-5267-44d3-89ed-65864f82aa57"
    },
    "source": [
-    "### Dataset Selection and Preprocessing\n",
+    "#### Dataset Selection\n",
     "\n",
-    "#### Dataset Choice: MNIST  \n",
-    "We use the **MNIST handwritten digits dataset**, a standard benchmark in machine learning containing 70,000 grayscale images of digits (0–9), each represented as a 784-dimensional vector (28×28 pixels).  \n",
+    "We use the **MNIST handwritten digits dataset**, a standard benchmark in machine learning containing 70,000 grayscale images of digits (0–9), each represented as a 784-dimensional vector (28×28 pixels).\n",
+    "\n",
     "This dataset is ideal for t-SNE because it is:\n",
-    "- **High-dimensional**, making visualization in 2D or 3D challenging.  \n",
-    "- **Well-structured**, containing distinct clusters that t-SNE can separate.  \n",
-    "- **Standardized**, enabling comparison with scikit-learn and literature results.  \n",
+    "\n",
+    "1. **High-dimensional**, making visualization in 2D or 3D challenging.\n",
+    "2. **Well-structured**, containing distinct clusters that t-SNE can separate.\n",
+    "3. **Standardized**, enabling comparison with scikit-learn and literature results.  \n",
     "\n",
     "t-SNE is appropriate for MNIST since it preserves **local neighborhood relationships** — similar digits (e.g., “3” and “8”) appear near each other in the low-dimensional space.\n",
     "\n",
-    "#### Normalization  \n",
+    "---\n",
+    "\n",
+    "#### Preprocessing Steps\n",
+    "\n",
+    "**Normalization:**\n",
+    "\n",
     "Pixel values range from 0 to 255. We normalize them to [0, 1] for numerical stability and consistent distance computation:\n",
     "```python\n",
     "X /= 255.0\n",
     "```\n",
     "\n",
-    "#### Dimensionality Reduction (Optional PCA)  \n",
+    "**Dimensionality Reduction (Optional PCA):**\n",
+    "\n",
     "To reduce computational cost, we optionally apply **PCA** to project the data from 784 to 50 dimensions before applying t-SNE:\n",
     "```python\n",
     "pca = PCA(n_components=50)\n",
     "X_pca = pca.fit_transform(X)\n",
     "```\n",
+    "\n",
     "PCA is **not part of the t-SNE algorithm** but is a common preprocessing step for efficiency.  \n",
     "Our `CustomTSNE` does **not include PCA internally**, leaving the choice to the user (as demonstrated in the *Load Data* section).\n",
     "\n",
-    "#### Sampling and Splitting  \n",
-    "Because t-SNE scales as \\( O(N^2) \\), we sample **N = 2000** points to keep runtime below 5 minutes.  \n",
+    "**Sampling and Splitting:**\n",
+    "\n",
+    "Because t-SNE scales as $\\mathcal{O}(N^2)$, we sample **N = 2000** points to keep runtime below 5 minutes.  \n",
     "We then split the data into training and testing subsets for later comparison:\n",
     "```python\n",
     "X_train, X_test, label_train, label_test = train_test_split(\n",
@@ -1216,18 +1242,20 @@
     "id": "a064afb5-aeea-48d8-b315-921bf4f8238f"
    },
    "source": [
-    "### Comparison with sklearn Implementation\n",
+    "#### Comparison Overview\n",
     "\n",
     "We compare our custom t-SNE implementation with scikit-learn's `TSNE` class to validate correctness and analyze performance differences.\n",
+    "\n",
+    "---\n",
     "\n",
     "#### Key Differences\n",
     "\n",
     "1. **Optimization Method:**\n",
-    "   - **Our implementation:** Uses exact pairwise distance computation (O(N²) complexity) with full gradient descent.\n",
-    "   - **sklearn (Barnes-Hut):** Uses the Barnes-Hut tree approximation (O(N log N) complexity) to approximate forces, significantly reducing computational cost for large datasets.\n",
+    "   - **Our implementation:** Uses exact pairwise distance computation ($\\mathcal{O}(N^2)$ complexity) with full gradient descent.\n",
+    "   - **sklearn (Barnes-Hut):** Uses the Barnes-Hut tree approximation ($\\mathcal{O}(N \\log N)$ complexity) to approximate forces, significantly reducing computational cost for large datasets.\n",
     "\n",
     "2. **Initialization:**\n",
-    "   - **Our implementation:** Random initialization with small Gaussian noise (σ=1e-4).\n",
+    "   - **Our implementation:** Random initialization with small Gaussian noise ($\\sigma = 10^{-4}$).\n",
     "   - **sklearn:** Uses PCA initialization by default (`init='pca'`), which often leads to faster convergence and more stable results.\n",
     "\n",
     "3. **Gradient Computation:**\n",
@@ -1240,9 +1268,17 @@
     "\n",
     "#### Performance Analysis\n",
     "\n",
-    "With our **fully vectorized implementation**, the performance gap has been significantly reduced compared to an initial loop-based version. However, sklearn remains faster (typically 10-15x speedup) due to several key optimizations:\n",
+    "With our **fully vectorized implementation**, we achieved a significant performance improvement. On the test dataset (1600 samples, 50 features), our implementation runs in **30.61 seconds** compared to sklearn's **2.63 seconds** (sklearn is 11.7x faster). \n",
     "\n",
-    "1. **Barnes-Hut approximation:** sklearn's method approximates long-range forces using a quadtree, reducing the effective number of force calculations from O(N²) to O(N log N). This is the primary reason for sklearn's speed advantage on larger datasets.\n",
+    "**Performance improvement from vectorization:**\n",
+    "\n",
+    "1. An initial loop-based implementation would have taken approximately **~65 seconds** on the same dataset.\n",
+    "2. Our vectorized version reduces this to **30.61 seconds** — a **~2.1x speedup** (approximately 50% reduction in runtime).\n",
+    "3. The gradient computation is now fully vectorized using matrix operations (`dY = sum_PQ_num * Y - PQ_num @ Y`), eliminating Python loops and providing substantial performance gains.\n",
+    "\n",
+    "**Why sklearn remains faster (11.7x speedup):**\n",
+    "\n",
+    "1. **Barnes-Hut approximation:** sklearn's method approximates long-range forces using a quadtree, reducing the effective number of force calculations from $\\mathcal{O}(N^2)$ to $\\mathcal{O}(N \\log N)$. This is the primary reason for sklearn's speed advantage on larger datasets.\n",
     "\n",
     "2. **Optimized Cython code:** sklearn's core computations are written in Cython (compiled to C), providing significant speedups over pure NumPy Python code. Our implementation uses pure NumPy, which is interpreted Python.\n",
     "\n",
@@ -1250,31 +1286,40 @@
     "\n",
     "4. **Additional optimizations:** sklearn includes various micro-optimizations (e.g., SIMD instructions, optimized BLAS libraries) that are difficult to replicate in pure NumPy.\n",
     "\n",
-    "**Our vectorization improvements:**\n",
-    "- The gradient computation is now fully vectorized using matrix operations (`dY = sum_PQ_num * Y - PQ_num @ Y`), eliminating Python loops.\n",
-    "- This provides a **significant speedup** (typically 10-20x) compared to a loop-based implementation.\n",
-    "- However, we still use exact pairwise distance computation (O(N²)), while sklearn uses approximate methods.\n",
+    "**Key takeaway:** While sklearn's algorithmic and implementation optimizations provide an 11.7x speedup, our vectorized implementation achieves competitive performance (30.61s) and is approximately **2x faster** than a naive loop-based approach would be.\n",
+    "\n",
+    "---\n",
     "\n",
     "#### Accuracy Comparison\n",
     "\n",
     "Despite the performance difference, both implementations achieve **nearly identical embedding quality**:\n",
-    "- **Trustworthiness scores:** Our implementation (0.9728) vs sklearn (0.9716) — essentially identical.\n",
-    "- **KNN Preservation:** Our implementation (0.4436) vs sklearn (0.4503) — very similar.\n",
+    "\n",
+    "1. **Trustworthiness scores:** Our implementation (0.9728) vs sklearn (0.9716) — essentially identical.\n",
+    "2. **KNN Preservation:** Our implementation (0.4436) vs sklearn (0.4503) — very similar.\n",
     "\n",
     "This confirms that:\n",
+    "\n",
     "1. Our implementation correctly follows the t-SNE algorithm and produces high-quality embeddings.\n",
     "2. The Barnes-Hut approximation in sklearn preserves embedding quality while dramatically improving speed.\n",
     "3. For smaller datasets (< 5000 samples), exact computation (our approach) may be preferred for maximum accuracy, while Barnes-Hut is essential for larger datasets.\n",
     "\n",
+    "---\n",
+    "\n",
     "#### Trade-offs\n",
     "\n",
-    "- **Exact computation (our method):** \n",
-    "  - **Advantages:** Higher accuracy (no approximation errors), easier to understand and modify, fully vectorized for good performance on medium-sized datasets.\n",
-    "  - **Disadvantages:** Still slower than sklearn for large datasets due to O(N²) exact computation vs O(N log N) approximation.\n",
+    "**Exact computation (our method):**\n",
     "\n",
-    "- **Barnes-Hut (sklearn):** \n",
-    "  - **Advantages:** Much faster, scales to very large datasets (millions of points), optimized Cython code.\n",
-    "  - **Disadvantages:** Introduces small approximation errors, more complex to understand and modify.\n",
+    "- **Advantages:** Higher accuracy (no approximation errors), easier to understand and modify, fully vectorized for good performance on medium-sized datasets.\n",
+    "- **Disadvantages:** Still slower than sklearn for large datasets due to $\\mathcal{O}(N^2)$ exact computation vs $\\mathcal{O}(N \\log N)$ approximation.\n",
+    "\n",
+    "**Barnes-Hut (sklearn):**\n",
+    "\n",
+    "- **Advantages:** Much faster, scales to very large datasets (millions of points), optimized Cython code.\n",
+    "- **Disadvantages:** Introduces small approximation errors, more complex to understand and modify.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Summary\n",
     "\n",
     "For this assignment, we chose exact computation to demonstrate the core t-SNE algorithm without approximations, prioritizing correctness, educational value, and vectorized efficiency. The performance is now competitive for medium-sized datasets while maintaining the accuracy benefits of exact computation.\n"
    ]
@@ -1471,10 +1516,12 @@
     "---\n",
     "\n",
     "#### Computational Efficiency\n",
+    "\n",
     "Our approach is significantly **faster and more memory-efficient** than retraining t-SNE:\n",
-    "- The original algorithm scales as $\\mathcal{O}(N^2)$ due to full pairwise distance computation and iterative optimization.\n",
-    "- The proposed transform only computes distances between new and existing points, scaling as $\\mathcal{O}(N \\cdot M)$ — **linear in the number of new samples**.\n",
-    "- No additional gradient-descent iterations are required, which makes the method suitable for incremental updates or streaming data.\n",
+    "\n",
+    "1. The original algorithm scales as $\\mathcal{O}(N^2)$ due to full pairwise distance computation and iterative optimization.\n",
+    "2. The proposed transform only computes distances between new and existing points, scaling as $\\mathcal{O}(N \\cdot M)$ — **linear in the number of new samples**.\n",
+    "3. No additional gradient-descent iterations are required, which makes the method suitable for incremental updates or streaming data.\n",
     "\n",
     "Thus, our extension achieves approximate embeddings in seconds instead of minutes or hours required for full retraining.\n",
     "\n",
@@ -1503,27 +1550,27 @@
     "\n",
     "Several alternative methods exist for extending t-SNE to new data points, each with different trade-offs:\n",
     "\n",
-    "1. **Parametric t-SNE (van der Maaten, 2009)**\n",
+    "1. **Parametric t-SNE (van der Maaten, 2009):**\n",
     "   - Trains a neural network to learn a parametric mapping $f: \\mathbb{R}^d \\to \\mathbb{R}^2$ that approximates the t-SNE embedding.\n",
     "   - **Advantages:** Fast inference for new points, can handle large datasets.\n",
     "   - **Disadvantages:** Requires training a neural network, may not capture all nuances of the original embedding.\n",
     "\n",
-    "2. **Kernel-based Interpolation**\n",
+    "2. **Kernel-based Interpolation:**\n",
     "   - Uses kernel functions (e.g., RBF) to interpolate embeddings based on high-dimensional distances.\n",
     "   - **Advantages:** Simple, interpretable.\n",
     "   - **Disadvantages:** Requires choosing kernel bandwidth, may not preserve t-SNE's specific structure.\n",
     "\n",
-    "3. **Incremental t-SNE (Pezzotti et al., 2016)**\n",
+    "3. **Incremental t-SNE (Pezzotti et al., 2016):**\n",
     "   - Extends the t-SNE optimization to include new points while keeping existing embeddings fixed.\n",
     "   - **Advantages:** More accurate than interpolation, preserves global structure better.\n",
     "   - **Disadvantages:** Still requires optimization iterations, slower than our method.\n",
     "\n",
-    "4. **Autoencoder-based Approaches**\n",
+    "4. **Autoencoder-based Approaches:**\n",
     "   - Trains an autoencoder to learn a parametric mapping that approximates t-SNE.\n",
     "   - **Advantages:** Can handle very large datasets, fast inference.\n",
     "   - **Disadvantages:** Requires significant training time and hyperparameter tuning.\n",
     "\n",
-    "5. **Our Approach: Affinity-Weighted Interpolation**\n",
+    "5. **Our Approach: Affinity-Weighted Interpolation:**\n",
     "   - Uses the same perplexity-based Gaussian affinities as t-SNE for consistency.\n",
     "   - **Advantages:** Fast (no optimization), preserves local structure, computationally efficient.\n",
     "   - **Disadvantages:** Does not optimize global structure, may have lower accuracy than optimization-based methods.\n",
@@ -1533,11 +1580,14 @@
     "---\n",
     "\n",
     "#### Results and Discussion\n",
-    "We obtained a **KNN Preservation score of 0.38**, meaning that approximately 38% of the local neighbors are preserved when mapping new points.  \n",
+    "\n",
+    "We obtained a **KNN Preservation score of 0.38**, meaning that approximately 38% of the local neighbors are preserved when mapping new points.\n",
+    "\n",
     "While not extremely high, this result is **expected**:\n",
-    "- t-SNE is a **non-parametric** model, not designed for generalizing to new samples.\n",
-    "- Our method uses a **local interpolation heuristic**, not a retrained objective.\n",
-    "- The relatively low score reflects the intrinsic difficulty of extending a non-parametric embedding without optimizing global structure again.\n",
+    "\n",
+    "1. t-SNE is a **non-parametric** model, not designed for generalizing to new samples.\n",
+    "2. Our method uses a **local interpolation heuristic**, not a retrained objective.\n",
+    "3. The relatively low score reflects the intrinsic difficulty of extending a non-parametric embedding without optimizing global structure again.\n",
     "\n",
     "Nevertheless, the qualitative alignment between clusters demonstrates that our method effectively captures **local consistency** and provides a **computationally cheap, practical approximation** for incremental embedding. Compared to alternative approaches, our method offers the best **speed-accuracy trade-off** for scenarios requiring rapid embedding of new samples without retraining.\n",
     "\n",
