No reuse of customTNSE

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1209,7 +1209,10 @@
    ],
    "source": [
     "custom_tsne = CustomTSNE(perplexity=X_train.shape[0]/10)\n",
+    "t0 = time.perf_counter()\n",
     "custom_Y = custom_tsne.fit_transform(X_train)\n",
+    "t1 = time.perf_counter()\n",
+    "custom_tsne_time = t1 - t0\n",
     "\n",
     "# Visualize the resulting 2D embeddings\n",
     "plt.figure(figsize=(8,6))\n",
@@ -1322,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "9b3628856e1335fd",
    "metadata": {
     "id": "9b3628856e1335fd"
@@ -1378,13 +1381,13 @@
     "# --- Use already preprocessed PCA data ---\n",
     "Xp = X_train  \n",
     "ys = label_train\n",
-    "tsne_my = CustomTSNE(perplexity=perplexity, learning_rate=learning_rate, n_iter=n_iter)\n",
     "\n",
-    "# --- Run custom TSNE ---\n",
-    "t0 = time.perf_counter()\n",
-    "Y_my = tsne_my.fit_transform(Xp)\n",
-    "t1 = time.perf_counter()\n",
-    "time_my = t1 - t0\n",
+    "# --- Reuse the CustomTSNE instance from Small Demonstration ---\n",
+    "# Note: custom_tsne, custom_Y, and custom_tsne_time are already computed in Cell 14\n",
+    "# We reuse them here to avoid retraining\n",
+    "tsne_my = custom_tsne\n",
+    "Y_my = custom_Y\n",
+    "time_my = custom_tsne_time  # Time already measured in Cell 14\n",
     "\n",
     "# --- Run sklearn TSNE ---\n",
     "t0 = time.perf_counter()\n",
